added minor fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "openai",
     "python-dotenv",
     "langchain-openai",
+    "langchain-groq",
     "langgraph",
     "langchain-core",
     "pydantic",
